# pangeo-forge-ndpyramid

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml  release.yaml
ci/: environment.yml
notebooks/: demo_environment.yaml  reproject_demo.ipynb  resample_demo.ipynb
pangeo_forge_ndpyramid/: __init__.py  _version.py  common.py  transforms.py
tests/: conftest.py  data_generation.py  test_end_to_end.py
tests/data/: nc1.nc  nc2.nc
